      supporting the use of different runners. (Robert Collins)

    * Change how file_ids and revision_ids are interned as part of
      inventory deserialization. Now we use the real ``intern()``, rather
      than our own workaround that would also cache a Unicode copy of the
      string, and never emptied the cache. This should slightly reduce
      memory consumption. (John Arbash Meinel)

    * New branch method ``create_clone_on_transport`` that returns a
      branch object. (Robert Collins)

    * New hook Commands['extend_command'] to allow plugins to access a
      command object before the command is run (or help generated from
      it), without overriding the command. (Robert Collins)

    * New version of the ``BzrDir.find_repository`` verb supporting
      ``_network_name`` to support removing more _ensure_real calls.
      (Robert Collins)

    * ``RemoteBranchFormat`` no longer claims to have a disk format string.
      (Robert Collins)

    * ``Repository`` objects now have ``suspend_write_group`` and
      ``resume_write_group`` methods.  These are currently only useful
      with pack repositories. (Andrew Bennetts, Robert Collins)

    * ``BzrDirFormat``, ``BranchFormat`` and ``RepositoryFormat`` objects
      now have a ``network_name`` for passing the format across RPC calls.
      (Robert Collins, Andrew Bennetts)

    * ``RepositoryFormat`` objects now all have a new attribute
      ``_serializer`` used by fetch when reserialising is required.
      (Robert Collins, Andrew Bennetts)

    * Some methods have been pulled up from ``BzrBranch`` to ``Branch``
      to aid branch types that are not bzr branch objects (like
      RemoteBranch). (Robert Collins, Andrew Bennetts)

    * Test adaptation has been made consistent throughout the built in
      tests. ``TestScenarioApplier``, ``multiply_tests_from_modules``,
      ``adapt_tests``, ``adapt_modules`` have all been deleted. Please